# datealgo-rs

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl  asm.sh  lib.asm  perftable.sh
.devcontainer/: devcontainer.json
.github/workflows/: asm-compare.yml  basic-bench.yml  ci.yml  criterion.yml  publish.yml  release-plz.yml
asm/: date_to_isoweekdate.asm  date_to_rd.asm  date_to_weekday.asm  datetime_to_secs.asm  datetime_to_systemtime.asm  days_in_month.asm  dhms_to_secs.asm  is_leap_year.asm  isoweekdate_to_date.asm  isoweekdate_to_rd.asm  isoweeks_in_year.asm  next_date.asm  prev_date.asm  rd_to_date.asm  rd_to_isoweekdate.asm  rd_to_weekday.asm  secs_to_datetime.asm  secs_to_dhms.asm  secs_to_systemtime.asm  systemtime_to_datetime.asm  systemtime_to_secs.asm
benches/: basic.rs  basic_zen.rs  basicd.rs  compare.rs  compare_support.rs  compare_zen.rs  compared.rs  criterion.rs  iai.rs  rata_die.rs  util.rs
scripts/: compare_asm_against_ref.py  verify_basic_bench.py
src/: lib.rs
src/datealgo/: mod.rs
tests/: api.rs  quickcheck.rs
