[package]
name = "datealgo"
version = "0.2.0"
edition = "2021"
authors = ["Nuutti Kotivuori <naked@iki.fi>"]
description = "Low-level date algorithms for libraries"
keywords = ["calendar", "date", "gregorian", "algorithm"]
categories = ["algorithms", "date-and-time", "no-std", "no-std::no-alloc"]
homepage = "https://github.com/nakedible/datealgo-rs"
repository = "https://github.com/nakedible/datealgo-rs"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "basicd"
harness = false

[[bench]]
name = "compared"
harness = false

[dev-dependencies]
chrono = "0.4.24"
criterion = "0.4.0"
divan = "0.1.2"
fastrand = "2.0.0"
iai-callgrind = "0.6"
quickcheck = "1.0.3"
time = { version = "0.3.21", features = ["quickcheck", "large-dates"] }
