[package]
name = "datealgo"
version = "0.2.1"
edition = "2021"
autobenches = false
authors = ["Nuutti Kotivuori <naked@iki.fi>"]
description = "Low-level date algorithms for libraries"
keywords = ["calendar", "date", "gregorian", "algorithm"]
categories = ["algorithms", "date-and-time", "no-std", "no-std::no-alloc"]
homepage = "https://github.com/nakedible/datealgo-rs"
repository = "https://github.com/nakedible/datealgo-rs"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
asmdump = []

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "iai"
harness = false

[dev-dependencies]
chrono = "0.4.44"
criterion = "0.8.2"
fastrand = "2.3.0"
iai-callgrind = "0.16.1"
quickcheck = "1.1.0"
time = { version = "0.3.47", features = ["quickcheck", "large-dates"] }
