[package]
name = "datealgo"
version = "0.2.1"
edition = "2021"
autobenches = false
authors = ["Nuutti Kotivuori <naked@iki.fi>"]
description = "Low-level date algorithms for libraries"
keywords = ["calendar", "date", "gregorian", "algorithm"]
categories = ["algorithms", "date-and-time", "no-std", "no-std::no-alloc"]
homepage = "https://github.com/nakedible/datealgo-rs"
repository = "https://github.com/nakedible/datealgo-rs"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
asmdump = []
criterion-benches = []
iai-bench = []

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "compare"
path = "benches/compare_zen.rs"
harness = false

[[bench]]
name = "basic"
path = "benches/basic_zen.rs"
harness = false

[[bench]]
name = "compare_criterion"
path = "benches/compare.rs"
harness = false
required-features = ["criterion-benches"]

[[bench]]
name = "basic_criterion"
path = "benches/basic.rs"
harness = false
required-features = ["criterion-benches"]

[[bench]]
name = "iai"
harness = false
required-features = ["iai-bench"]

[dev-dependencies]
chrono = "0.4.44"
criterion = "0.8.2"
fastrand = "2.3.0"
iai-callgrind = "0.16.1"
quickcheck = "1.1.0"
time = { version = "0.3.47", features = ["quickcheck", "large-dates"] }
zenbench = "0.1.3"
